# pages_manager

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  pages_manager.cpp
include/: pages_manager.hpp
